fixed responsiveness of scroll section for the information page, need to fix the mobile navbar then go back to evening out the spacing in the gallery when in mobile view

--- a/landing-style.css
+++ b/landing-style.css
@@ -5,28 +5,7 @@
 
 main {
   background-image: url(images/main-bg.jpg);
-  background-position: center;
-  background-size: cover;
   color: var(--black);
-}
-
-.grid-wrapper {
-  text-align: center;
-  border-radius: 10px;  
-  background-color: rgba(255, 255, 255, 0.308);
-  padding: 30px;
-  width: fit-content;
-  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.582);
-  transition: 1s;
-}
-
-.grid-wrapper:hover {
-  text-align: center;
-  border-radius: 10px;  
-  background-color: rgba(255, 255, 255, 0.616);
-  padding: 40px;
-  width: fit-content;
-  box-shadow: 0px 0px 40px var(--white);
 }
 
 .a-no-underline {
@@ -59,7 +38,6 @@ main {
 }
 
 /* LINKS SECTION */
-
 #links-section {
   background-color: var(--black);
   height: 400px;
