--- a/pages.css
+++ b/pages.css
@@ -1,7 +1,8 @@
-/*NAVBAR STYLE*/
 body {
   background-color: var(--black);
 }
+
+/*NAVBAR STYLE*/
 nav {
   display: flex;
   justify-content: space-between;
@@ -28,33 +29,20 @@ ul {
 }
 
 ul li:hover {
-  transform: scale(1.3);
+  transform: scale(1.1);
+  transition: 300ms;
+
 }
 
 ul li {
   margin: 0px 0px 0px 90px;
-  transition: 300ms;
 }
 
 main {
   height: 45vh;
   background-image: url(images/main-gallery.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
-
-/* SCROLL SECTION */      
-.scroll-section {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 30px;
-  padding: 90px 40px 90px 40px;
-  background-color: var(--black);
-}
-
-.scroll-section__info a {
-  padding-top: 10px;
-  color: aqua;
+.scroll-section__info {
+  justify-content:unset;
 }
